# Aphrora

./: Cargo.toml  LICENSE.txt  README.md
doc/: search-index.js  settings.html  source-files.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/lib/: all.html  fn.run_server.html  index.html  sidebar-items.js
doc/lib/http/: enum.RequestMethod.html  enum.ResponseStatus.html  index.html  sidebar-items.js  struct.Request.html  struct.Response.html
doc/src/lib/: http.rs.html  lib.rs.html
international/: add_more_languages.md
international/readme/: Chinese(Simplified).md
src/: file.rs  http.rs  lib.rs
