[package]
name = "aphrora"
version = "0.1.1"
description = "A simple server frame developed in Rust, it can also be used to build up GUI via webpages for rust applications."
keywords = ["simple", "server", "frame", "beginner"]

authors = ["JamesUmmec <DreamingBoat@outlook.com>"]
edition = "2018"
license-file = "LICENSE.txt"

homepage = "https://github.com/JamesUmmec/Aphrora"
repository = "https://github.com/JamesUmmec/Aphrora"

exclude = ["static"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
